Adiciona e organiza a sessão de análise

--- a/AluraStoreBrasil.ipynb
+++ b/AluraStoreBrasil.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Importação dos dados\n",
+        "# Importação dos dados:\n",
         "\n"
       ],
       "metadata": {
@@ -37,14 +38,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 158,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 293
         },
         "id": "T3EvaeQ_INIL",
-        "outputId": "e9f63493-c799-4548-b1a2-8f036daf92d8"
+        "outputId": "0c53ff0a-caaf-4ad0-c435-efc057227612"
       },
       "outputs": [
         {
@@ -74,7 +75,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3f0bec7d-dd89-47bc-9e0f-d8f0871b2ebe\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-5ff10a7e-5604-40a0-93e0-7df8e4949810\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -189,7 +190,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3f0bec7d-dd89-47bc-9e0f-d8f0871b2ebe')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5ff10a7e-5604-40a0-93e0-7df8e4949810')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -241,12 +242,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-3f0bec7d-dd89-47bc-9e0f-d8f0871b2ebe button.colab-df-convert');\n",
+              "        document.querySelector('#df-5ff10a7e-5604-40a0-93e0-7df8e4949810 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-3f0bec7d-dd89-47bc-9e0f-d8f0871b2ebe');\n",
+              "        const element = document.querySelector('#df-5ff10a7e-5604-40a0-93e0-7df8e4949810');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -266,8 +267,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-f7e7dbce-c775-4db3-b795-8eff46ca44bd\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f7e7dbce-c775-4db3-b795-8eff46ca44bd')\"\n",
+              "    <div id=\"df-5bed5739-fb6c-4c61-a2cd-80187ce15e89\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5bed5739-fb6c-4c61-a2cd-80187ce15e89')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -386,7 +387,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-f7e7dbce-c775-4db3-b795-8eff46ca44bd button');\n",
+              "            document.querySelector('#df-5bed5739-fb6c-4c61-a2cd-80187ce15e89 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -403,7 +404,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 158
         }
       ],
       "source": [
@@ -435,24 +436,46 @@
     {
       "cell_type": "code",
       "source": [
-        "\n"
+        "faturamento1 = loja['Preço'].sum()\n",
+        "faturamento2 = loja2['Preço'].sum()\n",
+        "faturamento3 = loja3['Preço'].sum()\n",
+        "faturamento4 = loja4['Preço'].sum()"
       ],
       "metadata": {
         "id": "xykobSftV64I"
       },
-      "execution_count": null,
+      "execution_count": 154,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "\n"
+        "\n",
+        "print(f'Faturamento da Loja 1: {faturamento1}')\n",
+        "print(f'Faturamento da Loja 2: {faturamento2}')\n",
+        "print(f'Faturamento da Loja 3: {faturamento3}')\n",
+        "print(f'Faturamento da Loja 4: {faturamento4}')"
       ],
       "metadata": {
-        "id": "KDyr8E71V3m-"
+        "id": "KDyr8E71V3m-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4a651869-9f0b-4f7c-b4a4-16bea0de573f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 155,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Faturamento da Loja 1: 1534509.12\n",
+            "Faturamento da Loja 2: 1488459.06\n",
+            "Faturamento da Loja 3: 1464025.03\n",
+            "Faturamento da Loja 4: 1384497.58\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -466,22 +489,86 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "cat_mais_vendido1 = loja.groupby('Categoria do Produto').size()\n",
+        "cat_mais_vendido2 = loja2.groupby('Categoria do Produto').size()\n",
+        "cat_mais_vendido3 = loja3.groupby('Categoria do Produto').size()\n",
+        "cat_mais_vendido4 = loja4.groupby('Categoria do Produto').size()\n",
         "\n"
       ],
       "metadata": {
         "id": "A34YupIuYhfF"
       },
-      "execution_count": null,
+      "execution_count": 127,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(f'Categoria de produto mais vendida na loja 1: \\n{cat_mais_vendido1.to_string()}')\n",
+        "print(f'\\nCategoria de produto mais vendida na loja 2: \\n{cat_mais_vendido2.to_string()}')\n",
+        "print(f'\\nCategoria de produto mais vendida na loja 3: \\n{cat_mais_vendido3.to_string()}')\n",
+        "print(f'\\nCategoria de produto mais vendida na loja 4: \\n{cat_mais_vendido4.to_string()}')\n"
+      ],
       "metadata": {
-        "id": "yZR6cOjXYSk1"
+        "id": "yZR6cOjXYSk1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dda13bec-973e-485c-b93b-e5f5bd514955"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 136,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Categoria de produto mais vendida na loja 1: \n",
+            "Categoria do Produto\n",
+            "brinquedos               324\n",
+            "eletrodomesticos         312\n",
+            "eletronicos              448\n",
+            "esporte e lazer          284\n",
+            "instrumentos musicais    182\n",
+            "livros                   173\n",
+            "moveis                   465\n",
+            "utilidades domesticas    171\n",
+            "\n",
+            "Categoria de produto mais vendida na loja 2: \n",
+            "Categoria do Produto\n",
+            "brinquedos               313\n",
+            "eletrodomesticos         305\n",
+            "eletronicos              422\n",
+            "esporte e lazer          275\n",
+            "instrumentos musicais    224\n",
+            "livros                   197\n",
+            "moveis                   442\n",
+            "utilidades domesticas    181\n",
+            "\n",
+            "Categoria de produto mais vendida na loja 3: \n",
+            "Categoria do Produto\n",
+            "brinquedos               315\n",
+            "eletrodomesticos         278\n",
+            "eletronicos              451\n",
+            "esporte e lazer          277\n",
+            "instrumentos musicais    177\n",
+            "livros                   185\n",
+            "moveis                   499\n",
+            "utilidades domesticas    177\n",
+            "\n",
+            "Categoria de produto mais vendida na loja 4: \n",
+            "Categoria do Produto\n",
+            "brinquedos               338\n",
+            "eletrodomesticos         254\n",
+            "eletronicos              451\n",
+            "esporte e lazer          277\n",
+            "instrumentos musicais    170\n",
+            "livros                   187\n",
+            "moveis                   480\n",
+            "utilidades domesticas    201\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -494,24 +581,47 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "media_loja1 = loja['Avaliação da compra'].mean()\n",
+        "media_loja2 = loja2['Avaliação da compra'].mean()\n",
+        "media_loja3 = loja3['Avaliação da compra'].mean()\n",
+        "media_loja4 = loja4['Avaliação da compra'].mean()"
+      ],
       "metadata": {
         "id": "bh3jjjJwY5MU",
         "collapsed": true
       },
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "\n"
+        "print(f'Média de avaliações da Loja 1: {media_loja1}')\n",
+        "print(f'Média de avaliações da Loja 2: {media_loja2}')\n",
+        "print(f'Média de avaliações da Loja 3: {media_loja3}')\n",
+        "print(f'Média de avaliações da Loja 4: {media_loja4}')\n"
       ],
       "metadata": {
-        "id": "I0KkjPoTY88F"
+        "id": "I0KkjPoTY88F",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "39aa54f5-205f-4c54-d322-40615d47bb91"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 156,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Média de avaliações da Loja 1: 3.976685036032217\n",
+            "Média de avaliações da Loja 2: 4.037303942348453\n",
+            "Média de avaliações da Loja 3: 4.048325561678677\n",
+            "Média de avaliações da Loja 4: 3.9957591178965224\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -524,22 +634,123 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "mais_vendido1 = loja.groupby('Produto').size().sort_values(ascending=False).head(5)\n",
+        "menos_vendido1 = loja.groupby('Produto').size().sort_values(ascending=False).tail(5)\n",
+        "\n",
+        "mais_vendido2 = loja2.groupby('Produto').size().sort_values(ascending=False).head(5)\n",
+        "menos_vendido2 = loja2.groupby('Produto').size().sort_values(ascending=False).tail(5)\n",
+        "\n",
+        "mais_vendido3 = loja3.groupby('Produto').size().sort_values(ascending=False).head(5)\n",
+        "menos_vendido3 = loja3.groupby('Produto').size().sort_values(ascending=False).tail(5)\n",
+        "\n",
+        "mais_vendido4 = loja4.groupby('Produto').size().sort_values(ascending=False).head(5)\n",
+        "menos_vendido4 = loja4.groupby('Produto').size().sort_values(ascending=False).tail(5)\n"
+      ],
       "metadata": {
         "id": "qoyjqijQZHfF",
         "collapsed": true
       },
-      "execution_count": null,
+      "execution_count": 141,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(f'Produtos mais vendidos Loja 1: \\n {mais_vendido1.to_string()}')\n",
+        "print(f'\\nProdutos menos vendidos Loja 1: \\n {menos_vendido1.to_string()}')\n",
+        "print('_________________________________')\n",
+        "print(f'\\nProdutos mais vendidos Loja 2: \\n {mais_vendido2.to_string()}')\n",
+        "print(f'\\nProdutos menos vendidos Loja 2: \\n {menos_vendido2.to_string()}')\n",
+        "print('_________________________________')\n",
+        "print(f'\\nProdutos mais vendidos Loja 3: \\n {mais_vendido3.to_string()}')\n",
+        "print(f'\\nProdutos menos vendidos Loja 3: \\n {menos_vendido3.to_string()}')\n",
+        "print('_________________________________')\n",
+        "print(f'\\nProdutos mais vendidos Loja 4: \\n {mais_vendido4.to_string()}')\n",
+        "print(f'\\nProdutos menos vendidos Loja 4: \\n {menos_vendido4.to_string()}')"
+      ],
       "metadata": {
-        "id": "0Sw3sd4IZIGW"
+        "id": "0Sw3sd4IZIGW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "97b257b1-9f99-448d-ef10-969a55b338c1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 152,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Produtos mais vendidos Loja 1: \n",
+            " Produto\n",
+            "TV Led UHD 4K         60\n",
+            "Micro-ondas           60\n",
+            "Guarda roupas         60\n",
+            "Secadora de roupas    58\n",
+            "Blocos de montar      56\n",
+            "\n",
+            "Produtos menos vendidos Loja 1: \n",
+            " Produto\n",
+            "Ciência de dados com python    39\n",
+            "Pandeiro                       36\n",
+            "Panela de pressão              35\n",
+            "Celular ABXY                   33\n",
+            "Headset                        33\n",
+            "_________________________________\n",
+            "\n",
+            "Produtos mais vendidos Loja 2: \n",
+            " Produto\n",
+            "Iniciando em programação    65\n",
+            "Micro-ondas                 62\n",
+            "Bateria                     61\n",
+            "Violão                      58\n",
+            "Pandeiro                    58\n",
+            "\n",
+            "Produtos menos vendidos Loja 2: \n",
+            " Produto\n",
+            "Fone de ouvido       37\n",
+            "Poltrona             35\n",
+            "Impressora           34\n",
+            "Mesa de jantar       34\n",
+            "Jogo de tabuleiro    32\n",
+            "_________________________________\n",
+            "\n",
+            "Produtos mais vendidos Loja 3: \n",
+            " Produto\n",
+            "Kit banquetas      57\n",
+            "Mesa de jantar     56\n",
+            "Cama king          56\n",
+            "Cômoda             55\n",
+            "Jogo de panelas    55\n",
+            "\n",
+            "Produtos menos vendidos Loja 3: \n",
+            " Produto\n",
+            "Copo térmico        38\n",
+            "Micro-ondas         36\n",
+            "Jogo de copos       36\n",
+            "Mochila             36\n",
+            "Blocos de montar    35\n",
+            "_________________________________\n",
+            "\n",
+            "Produtos mais vendidos Loja 4: \n",
+            " Produto\n",
+            "Cama box                   62\n",
+            "Faqueiro                   59\n",
+            "Cama king                  56\n",
+            "Dashboards com Power BI    56\n",
+            "Cômoda                     55\n",
+            "\n",
+            "Produtos menos vendidos Loja 4: \n",
+            " Produto\n",
+            "Geladeira             38\n",
+            "Lavadora de roupas    38\n",
+            "Violão                37\n",
+            "Guarda roupas         34\n",
+            "Guitarra              33\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -552,31 +763,65 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "frete_media_loja1 = loja['Frete'].mean()\n",
+        "frete_media_loja2 = loja2['Frete'].mean()\n",
+        "frete_media_loja3 = loja3['Frete'].mean()\n",
+        "frete_media_loja4 = loja4['Frete'].mean()"
+      ],
       "metadata": {
         "id": "S2JeaCykZNy9",
         "collapsed": true
       },
-      "execution_count": null,
+      "execution_count": 109,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(f'Média de frete da Loja 1: {frete_media_loja1}')\n",
+        "print(f'Média de frete da Loja 2: {frete_media_loja2}')\n",
+        "print(f'Média de frete da Loja 3: {frete_media_loja3}')\n",
+        "print(f'Média de frete da Loja 4: {frete_media_loja4}')"
+      ],
       "metadata": {
-        "id": "H7JKHQkXTzRl"
+        "id": "H7JKHQkXTzRl",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3998c6f7-4c1f-499c-adb1-673dfc75bf62"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 157,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Média de frete da Loja 1: 34.69180491551149\n",
+            "Média de frete da Loja 2: 33.62194065817927\n",
+            "Média de frete da Loja 3: 33.07446427411743\n",
+            "Média de frete da Loja 4: 31.278997081841727\n"
+          ]
+        }
+      ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# Visualização (Gráficos)\n"
+      ],
       "metadata": {
-        "id": "0tSdCie9ZQlt"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "FOTUUXlo3nbI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# New Section"
+      ],
+      "metadata": {
+        "id": "QPiscuLa353A"
+      }
     }
   ]
 }
