Adiciona insights a cada grafico e o relatório final

--- a/AluraStoreBrasil.ipynb
+++ b/AluraStoreBrasil.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +42,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 258
         },
         "id": "T3EvaeQ_INIL",
         "outputId": "b31ce086-82df-4e33-d516-89d40df43d59"
@@ -868,6 +869,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Embora a diferença do faturamento entre as lojas seja majoritamente bem sutil, é notável a diferença entre a Loja 1 e a Lojaa 4: a Loja 4 está R$150,011 atrás, sendo de longe a menos lucrativa entre as 4. A diferença entre a Loja 3 e a 4 é de R$79,527."
+      ],
+      "metadata": {
+        "id": "3fv_Vpfgjlqb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Frete médio entre as lojas"
       ],
       "metadata": {
@@ -910,6 +920,24 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A Loja 1, embora tenha o maior faturamento, têm também a média de frete mais alta. A diferença entre as Lojas 2 e 3, como no faturamento, é bem sutil, e a média de frete da Loja 4 é notavelmente mais baixa que às demais."
+      ],
+      "metadata": {
+        "id": "xwkWfOl5klTc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A Loja 1"
+      ],
+      "metadata": {
+        "id": "gA3U73FxlgiA"
+      }
     },
     {
       "cell_type": "markdown",
@@ -957,6 +985,23 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Em todas as lojas, as categorias mais compradas, são de longe Moveis e Eletrônicos. A Loja 2 tem o maior equilíbrio entre todas as categorias, e teve o \"chão\" de consumo mais baixo: sua categoria menos vendida teve uma quantidade de vendas comparável com a quantidade de vendas da segunda/terceira categoria menos vendida das demais.  \n",
+        "\n",
+        "Volume Loja 1: 2.359 itens\n",
+        "\n",
+        "Volume Loja 2: 2.359 itens\n",
+        "\n",
+        "Volume Loja 3: 2.359 itens\n",
+        "\n",
+        "Volume Loja 4: 2.358 itens"
+      ],
+      "metadata": {
+        "id": "SDttm4zQmkTr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Médias de avaliação de cada loja"
       ],
       "metadata": {
@@ -1000,6 +1045,35 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A Loja 1, que tem a média de frete mais alta, têm também a avaliação mais baixa entre todas as lojas, com a Loja 4 logo acima. Novamente vemos bastante equilibrio entre as Lojas 2 e 3."
+      ],
+      "metadata": {
+        "id": "aBahRmfmntI0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Relatorio Final"
+      ],
+      "metadata": {
+        "id": "wKkwTEzGqyBd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "As Lojas 2 e 3 são o padrão de ouro: avaliações decentes, frete moderado e bom faturamento. Há muito equillibrio entre as duas, o que nos deixa com as Lojas 1 e 4: A Loja 1, embora tenha o maior faturamento, acaba sendo a loja mais \" instável\", com a menor avaliação (abaixo de 4 estrelas) e de longe a maior média de frete. Já a Loja 4, embora tenha o menor faturmento, é definitivamente mais estável, possuindo o menor valor de frete e uma avaliação decente.\n",
+        "\n",
+        "Já que a quantidade vendas é bastante similar entre todas as lojas, pressuponho que o motivo do faturamento baixo da Loja 4 seja os produtos vendidos: calculando o faturamento com o total de vendas, chega-se à conclusão de que a média de valor dos produtos vendidos na Loja 4 é baixo. Com a estratégia de vendas e marketing correto, imagino que a Loja 4 tenha o potenncial para alcançar ou até mesmo superar as outras lojas, sendo esta então a minha sugestão para o Sr. João."
+      ],
+      "metadata": {
+        "id": "-3Bb2vPkrIFq"
+      }
     }
   ]
 }
