--- a/AluraStoreBrasil.ipynb
+++ b/AluraStoreBrasil.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -450,7 +449,7 @@
       "metadata": {
         "id": "xykobSftV64I"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -469,7 +468,7 @@
         },
         "outputId": "7a0834aa-8091-4d40-e18b-f05e1f2287a3"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -505,7 +504,7 @@
       "metadata": {
         "id": "A34YupIuYhfF"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -523,7 +522,7 @@
         },
         "outputId": "da72a5e8-1c61-4aa9-f8e1-4aca19634dd5"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -598,7 +597,7 @@
         "id": "bh3jjjJwY5MU",
         "collapsed": true
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -616,7 +615,7 @@
         },
         "outputId": "baac80aa-fbaf-44f2-934c-1b76e89d86c2"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -658,7 +657,7 @@
         "id": "qoyjqijQZHfF",
         "collapsed": true
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -683,7 +682,7 @@
         },
         "outputId": "6432bcc9-f225-4344-a537-07be8cf9c68e"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -781,7 +780,7 @@
         "id": "S2JeaCykZNy9",
         "collapsed": true
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -799,7 +798,7 @@
         },
         "outputId": "f25b7a09-9164-46e5-b9a2-f9a806400c0e"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -841,8 +840,7 @@
         "    valor = barra.get_height()\n",
         "    texto_valor = f'R${valor:,.0f}'\n",
         "\n",
-        "    grf1.annotate(texto_valor, (barra.get_x() + barra.get_width() / 2, valor), ha='center', va='bottom', xytext=(0, 2), textcoords='offset points')\n",
-        ""
+        "    grf1.annotate(texto_valor, (barra.get_x() + barra.get_width() / 2, valor), ha='center', va='bottom', xytext=(0, 2), textcoords='offset points')\n"
       ],
       "metadata": {
         "colab": {
@@ -852,7 +850,7 @@
         "id": "eNgppNRkzlRF",
         "outputId": "2db19d19-1570-49ba-b95e-022fa7033dff"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -869,10 +867,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Embora a diferença do faturamento entre as lojas seja majoritamente bem sutil, é notável a diferença entre a Loja 1 e a Lojaa 4: a Loja 4 está R$150,011 atrás, sendo de longe a menos lucrativa entre as 4. A diferença entre a Loja 3 e a 4 é de R$79,527."
+        "  Embora a diferença do faturamento entre as lojas seja majoritamente bem sutil, é notável a diferença entre a Loja 1 e a Lojaa 4: a Loja 4 esta R$150,011 atrás, sendo de longe a menos lucrativa entre as 4.\n"
       ],
       "metadata": {
-        "id": "3fv_Vpfgjlqb"
+        "id": "FrCWqbPc7rBL"
       }
     },
     {
@@ -907,7 +905,7 @@
         "id": "qe49QDYn36Mh",
         "outputId": "c90e699e-508d-4fef-cdef-0e4bf5ed39a0"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -924,28 +922,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "A Loja 1, embora tenha o maior faturamento, têm também a média de frete mais alta. A diferença entre as Lojas 2 e 3, como no faturamento, é bem sutil, e a média de frete da Loja 4 é notavelmente mais baixa que às demais."
+        "A Loja 1, embora tenha o maior faturamento, tem também a média de frete mais alta. A diferença entre as Lojas 2 e 3, como no faturamento, é bem sutil, e a média de frete da Loja 4 é notavelmente mais baixa que às demais."
       ],
       "metadata": {
         "id": "xwkWfOl5klTc"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "A Loja 1"
-      ],
-      "metadata": {
-        "id": "gA3U73FxlgiA"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Categorias mais vendidas em cada loja\n"
-      ],
-      "metadata": {
-        "id": "8-iSvsOV_mws"
       }
     },
     {
@@ -985,15 +965,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Em todas as lojas, as categorias mais compradas, são de longe Moveis e Eletrônicos. A Loja 2 tem o maior equilíbrio entre todas as categorias, e teve o \"chão\" de consumo mais baixo: sua categoria menos vendida teve uma quantidade de vendas comparável com a quantidade de vendas da segunda/terceira categoria menos vendida das demais.  \n",
+        "Em todas as lojas, as categorias mais compradas, são de longe Móveis e Eletrônicos. A Loja 2 tem o maior equilíbrio entre todas as categorias, e teve o \"chão\" de consumo mais baixo: sua categoria menos vendida teve uma quantidade de vendas comparável com a quantidade de vendas da segunda/terceira categoria menos vendida das demais.  \n",
         "\n",
-        "Volume Loja 1: 2.359 itens\n",
         "\n",
-        "Volume Loja 2: 2.359 itens\n",
+        "* Volume Loja 1: 2.359 itens\n",
         "\n",
-        "Volume Loja 3: 2.359 itens\n",
+        "* Volume Loja 2: 2.359 itens\n",
         "\n",
-        "Volume Loja 4: 2.358 itens"
+        "* Volume Loja 3: 2.359 itens\n",
+        "\n",
+        "* Volume Loja 4: 2.358 itens\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "SDttm4zQmkTr"
@@ -1032,7 +1016,7 @@
         "id": "a0nhPnyXAupZ",
         "outputId": "448f04fb-59f9-4a29-ec50-7317a0c8033c"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1049,7 +1033,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "A Loja 1, que tem a média de frete mais alta, têm também a avaliação mais baixa entre todas as lojas, com a Loja 4 logo acima. Novamente vemos bastante equilibrio entre as Lojas 2 e 3."
+        "A Loja 1, que tem a média de frete mais alta, têm também a avaliação mais baixa entre todas as lojas, com a Loja 4 logo acima. Novamente vemos bastante equilíbrio entre as Lojas 2 e 3."
       ],
       "metadata": {
         "id": "aBahRmfmntI0"
@@ -1067,9 +1051,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "As Lojas 2 e 3 são o padrão de ouro: avaliações decentes, frete moderado e bom faturamento. Há muito equillibrio entre as duas, o que nos deixa com as Lojas 1 e 4: A Loja 1, embora tenha o maior faturamento, acaba sendo a loja mais \" instável\", com a menor avaliação (abaixo de 4 estrelas) e de longe a maior média de frete. Já a Loja 4, embora tenha o menor faturmento, é definitivamente mais estável, possuindo o menor valor de frete e uma avaliação decente.\n",
+        "As Lojas 2 e 3 são o padrão de ouro: avaliações decentes, frete moderado e bom faturamento. Há muito equilíbrio entre as duas, o que nos deixa com as Lojas 1 e 4: A Loja 1, embora tenha o maior faturamento, acaba sendo a loja mais \"instável\", com a menor avaliação (abaixo de 4 estrelas) e de longe a maior média de frete. Já a Loja 4, embora tenha o menor faturamento, é definitivamente mais estável, possuindo o menor valor de frete e uma avaliação decente.\n",
         "\n",
-        "Já que a quantidade vendas é bastante similar entre todas as lojas, pressuponho que o motivo do faturamento baixo da Loja 4 seja os produtos vendidos: calculando o faturamento com o total de vendas, chega-se à conclusão de que a média de valor dos produtos vendidos na Loja 4 é baixo. Com a estratégia de vendas e marketing correto, imagino que a Loja 4 tenha o potenncial para alcançar ou até mesmo superar as outras lojas, sendo esta então a minha sugestão para o Sr. João."
+        "Já que a quantidade de vendas é bastante similar entre todas as lojas, pressuponho que o motivo do faturamento baixo da Loja 4 seja os produtos vendidos: calculando o faturamento com o total de vendas, chega-se à conclusão de que o ticket médio dos produtos vendidos na Loja 4 é o mais baixo.\n",
+        "\n",
+        "Curiosamente, isso ocorre mesmo com a Loja 4 vendendo um alto volume de itens nas categorias \"Móveis\" e \"Eletrônicos\". Isso sugere fortemente que a Loja 4 tem um mix de produtos focado em itens de menor valor dentro dessas categorias (ex: periféricos de eletrônicos vs. TVs; cadeiras vs. sofás).\n",
+        "\n",
+        "Minha sugestão seria vender a Loja 1, que é a mais instável, e realizar pesquisas mais a fundo acerca da situação da Loja 4, e baseado em seus resultados, aplicar as estratégias de marketing e venda corretas à Loja 4, que tem o potencial de se aproximar ou até mesmo superar as demais."
       ],
       "metadata": {
         "id": "-3Bb2vPkrIFq"
